fix(dev): scrollbar issue

--- a/ui/dev/src/css/app.sass
+++ b/ui/dev/src/css/app.sass
@@ -24,11 +24,11 @@
   // scrollbars
   --markdown-scrollbar-width-height        : 10px
   --markdown-scrollbar-track               : #eeeeee
-  --markdown-scrollbar-thumb               : var(--background-color)
-  --markdown-scrollbar-thumb-hover         : var(--background-color-hover)
+  --markdown-scrollbar-thumb               : rgb(204,231,255)
+  --markdown-scrollbar-thumb-hover         : rgb(33,118,210)
   --markdown-scrollbar-track-dark          : #eeeeee
-  --markdown-scrollbar-thumb-dark          : var(--background-color)
-  --markdown-scrollbar-thumb-hover-dark    : var(--background-color-hover)
+  --markdown-scrollbar-thumb-dark          : rgb(204,231,255)
+  --markdown-scrollbar-thumb-hover-dark    : rgb(33,118,210)
 
 
 ::-webkit-scrollbar
